# course_5

./: main.py  pyproject.toml  readme.md
json/: employers.json
sql/: create_tables.sql
src/: abstract_api.py  db_manager.py  employer.py  head_hunter_api.py  menu.py  vacancy.py
